feat: should_inject_dependency_via_field