@@ -4,6 +4,7 @@ import jakarta.inject.Inject;
 import org.boyu.exception.IllegalComponentException;
 
 import java.lang.reflect.Constructor;
+import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Parameter;
 import java.util.Arrays;
@@ -15,9 +16,37 @@ import static org.boyu.exception.IllegalComponentException.Reason.NO_PROPER_CONS
 
 class ConstructionInjectionProvider<T> implements ComponentProvider<T> {
     private final Constructor<T> injectConstructor;
+    private final List<Field> injectFields;
 
     public ConstructionInjectionProvider(Class<T> impl) {
         this.injectConstructor = getConstructor(impl);
+        this.injectFields = getInjectFields(impl);
+    }
+
+    @Override
+    public T get(Context context) {
+        try {
+            final Object[] objects = Arrays.stream(injectConstructor.getParameters())
+                    .map(Parameter::getType)
+                    .map(typeKey -> context.get(typeKey).get())
+                    .toArray();
+            final T instance = injectConstructor.newInstance(objects);
+            for (Field field : injectFields) {
+                final Object fieldInstance = context.get(field.getType()).get();
+                field.set(instance, fieldInstance);
+            }
+
+            return instance;
+        } catch (InvocationTargetException | InstantiationException | IllegalAccessException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    @Override
+    public List<Class<?>> getDependencies() {
+        return Arrays.stream(injectConstructor.getParameters())
+                .map(Parameter::getType)
+                .collect(Collectors.toList());
     }
 
     private static <U> Constructor<U> getConstructor(Class<U> impl) {
@@ -32,30 +61,16 @@ class ConstructionInjectionProvider<T> implements ComponentProvider<T> {
                 .findFirst()
                 .orElseGet(() -> {
                     try {
-                        return impl.getConstructor();
+                        return impl.getDeclaredConstructor();
                     } catch (NoSuchMethodException e) {
                         throw new IllegalComponentException(NO_PROPER_CONSTRUCTOR_FOUND.getValue());
                     }
                 });
     }
 
-    @Override
-    public T get(Context context) {
-        try {
-            final Object[] objects = Arrays.stream(injectConstructor.getParameters())
-                    .map(Parameter::getType)
-                    .map(typeKey -> context.get(typeKey).get())
-                    .toArray();
-            return injectConstructor.newInstance(objects);
-        } catch (InvocationTargetException | InstantiationException | IllegalAccessException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    @Override
-    public List<Class<?>> getDependencies() {
-        return Arrays.stream(injectConstructor.getParameters())
-                .map(Parameter::getType)
-                .collect(Collectors.toList());
+    private static <T> List<Field> getInjectFields(Class<T> impl) {
+        return Arrays.stream(impl.getDeclaredFields())
+                .filter(it -> it.isAnnotationPresent(Inject.class))
+                .toList();
     }
 }
